--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,19 +1,33 @@
 
-<header>
-    <app-menu-bar></app-menu-bar>
-</header>
-
-
 <app-menu-title></app-menu-title>
 
 <div class="articles">
     <div class="articles_left">
-        <app-big-card></app-big-card>
+        <app-big-card 
+            img = "https://medias.itatiaia.com.br/generic/gol-da-vitoria-do-santos-veio-aos-48-minutos-do-segundo-tempo-com-julio-furch-1f1db540-80c3-4f80-86bf-cd5a6de36cbe.medium.webp"
+            cardTitle = "Santos vira para cima do Bahia e vence confronto direto em plena Fonte Nova" 
+            cardDescription = " Após três derrotas consecutivas, o Peixe voltou a vencer na reestreia do técnico interino Marcelo Fernandes. E não qualquer triunfo. Num confronto direto contra o Bahia, na noite desta segunda-feira (18), em plena Arena Fonte Nova, o Peixe conseguiu uma virada do alívio para cima do Esquadrão: 2 a 1."
+            Id="1">
+        </app-big-card>
     </div>
 
     <div class="articles_right">
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
-        <app-small-card></app-small-card>
+        <app-small-card 
+            img="https://trivela.com.br/wp-content/uploads/2023/09/Leo-Fernandez-e-John-Kennedy-comemoram-gol-que-deu-vitoria-ao-Fluminense-sobre-o-Cruzeiro-e1695263504300-1536x862.jpg"
+            cardTitle="Fluminense bate o Cruzeiro e entra no G4 do Brasileirão"
+            Id="2">
+        </app-small-card>
+
+        <app-small-card 
+            img="https://www.sites-de-apostas.net/wp-content/uploads/2023/09/ezgif.com-gif-maker-100-768x631.jpg"
+            cardTitle="Fluminense bate o Cruzeiro e entra no G4 do Brasileirão"
+            Id="3">
+        </app-small-card>
+
+        <app-small-card 
+            img="https://trivela.com.br/wp-content/uploads/2023/09/Leo-Fernandez-e-John-Kennedy-comemoram-gol-que-deu-vitoria-ao-Fluminense-sobre-o-Cruzeiro-e1695263504300-1536x862.jpg"
+            cardTitle="Fluminense bate o Cruzeiro e entra no G4 do Brasileirão"
+            Id="4">
+        </app-small-card>
     </div>
 </div>
