--- a/src/app/components/big-card/big-card.component.css
+++ b/src/app/components/big-card/big-card.component.css
@@ -1,6 +1,6 @@
 .container_big-card{
     max-width: 450px;
-    height: 450px;
+    height: 100%;
 
     display: flex;
     flex-direction: column;
@@ -28,5 +28,6 @@
 @media  screen and (max-width:700px) {
     .container_big-card{
         margin-left: 0;
+        height: 100%;
     }
 }
