--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -3,14 +3,23 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 2rem;
 }
 
-.articles_right{
-   margin-left: 1.5rem;
-}
-
-header{
+@media  screen and (max-width:700px){
+    .articles{
+        flex-direction: column;
+        margin-left: .8rem; margin-right: .8rem;
+    }
+   .articles_right{
     margin-top: 1rem;
-    display: flex;
-    justify-content: center;
+   }
 }
+
+@media  screen and (min-width:701px){
+    .articles_right{
+        margin-left: 1.5rem;
+     }
+     
+}
+
